argocd/calibre/manifests/calibre.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre
  namespace: calibre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calibre-web
  template:
    metadata:
      labels:
        app: calibre-web
    spec:
      containers:
      - name: calibre-web
        image: lscr.io/linuxserver/calibre-web:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8083
        volumeMounts:
        - name: config
          mountPath: /config
        - name: books
          mountPath: /books
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 60
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
        resources:
          requests:
            cpu: "50m"
            memory: "400Mi"
          limits:
            cpu: "500m"
            memory: "400Mi"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: calibre-web-config
      - name: books
        persistentVolumeClaim:
          claimName: calibre-web-books
